--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.0",
     "firebase": "^9.6.8",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^17.0.2",
