--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "dayjs": "^1.11.0",
     "firebase": "^9.6.8",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.1.2",
     "react-router-dom": "^6.2.2",
